src/test/deca/syntax/valid/asm-simpleTest.deca
class A{
	void Sam() asm("dodo");
}
