src/test/deca/syntax/invalid/if-withoutParenthesis.deca
{
    if b == 5 {
        print("hey");
    }
}